// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrantListEditorRow should have a proper style generator 1`] = `
Object {
  "hideIcon": Object {
    "display": "none",
  },
  "identifierName": Object {
    "&:before": Object {
      "content": "\\"UQ Id: \\"",
    },
    "fontSize": "test4",
    "marginTop": 8,
  },
  "identifierSubtitle": Object {
    "&:before": Object {
      "content": "\\"UQ Username: \\"",
    },
    "fontSize": "test4",
  },
  "primary": Object {
    "fontSize": "test3",
  },
  "rowSelected": Object {
    "backgroundColor": "test1",
  },
  "selected": Object {
    "color": "white !important",
    "fontWeight": "test2",
  },
}
`;

exports[`GrantListEditorRow should have a proper style generator 2`] = `
Object {
  "hideIcon": Object {
    "display": "none",
  },
  "identifierName": Object {
    "&:before": Object {
      "content": "\\"UQ Id: \\"",
    },
    "fontSize": "test4",
    "marginTop": 8,
  },
  "identifierSubtitle": Object {
    "&:before": Object {
      "content": "\\"UQ Username: \\"",
    },
    "fontSize": "test4",
  },
  "primary": Object {
    "fontSize": "test3",
  },
  "rowSelected": Object {
    "backgroundColor": undefined,
  },
  "selected": Object {
    "color": "white !important",
    "fontWeight": "test2",
  },
}
`;

exports[`GrantListEditorRow should have a proper style generator 3`] = `
Object {
  "hideIcon": Object {
    "display": "none",
  },
  "identifierName": Object {
    "&:before": Object {
      "content": "\\"UQ Id: \\"",
    },
    "fontSize": "test4",
    "marginTop": 8,
  },
  "identifierSubtitle": Object {
    "&:before": Object {
      "content": "\\"UQ Username: \\"",
    },
    "fontSize": "test4",
  },
  "primary": Object {
    "fontSize": "test3",
  },
  "rowSelected": Object {
    "backgroundColor": undefined,
  },
  "selected": Object {
    "color": "white !important",
    "fontWeight": "test2",
  },
}
`;

exports[`GrantListEditorRow should render default mobile view 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label={null}
    divider={true}
    style={
      Object {
        "padding": "8px 0 8px 0",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={10}
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="center"
          alignItems="stretch"
          container={true}
          spacing={0}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(ListItemText))
              disableTypography={true}
              primary={
                <WithStyles(ForwardRef(Typography))
                  classes={
                    Object {
                      "root": "undefined ",
                    }
                  }
                  noWrap={true}
                  variant="body2"
                />
              }
              secondary={
                <WithStyles(ForwardRef(Typography))
                  classes={
                    Object {
                      "root": "",
                    }
                  }
                  noWrap={true}
                  variant="caption"
                >
                  
                </WithStyles(ForwardRef(Typography))>
              }
              style={
                Object {
                  "padding": 0,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <Hidden
            xsDown={true}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={5}
            >
              <WithStyles(ForwardRef(ListItemText))
                disableTypography={true}
                primary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "undefined ",
                      }
                    }
                    noWrap={true}
                    variant="body2"
                  >
                    undefined
                  </WithStyles(ForwardRef(Typography))>
                }
                secondary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "",
                      }
                    }
                    noWrap={true}
                    variant="caption"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                style={
                  Object {
                    "padding": 0,
                  }
                }
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={4}
            >
              <WithStyles(ForwardRef(ListItemText))
                disableTypography={true}
                primary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "undefined ",
                      }
                    }
                    noWrap={true}
                    variant="body2"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                secondary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "",
                      }
                    }
                    noWrap={true}
                    variant="caption"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                style={
                  Object {
                    "padding": 0,
                  }
                }
              />
            </WithStyles(ForwardRef(Grid))>
          </Hidden>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={2}
      >
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          style={
            Object {
              "margin": "0 0 -32px 0",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            container={true}
            spacing={0}
          >
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
                xs={8}
              >
                <WithStyles(ForwardRef(Tooltip))
                  disableFocusListener={true}
                  disableHoverListener={true}
                  disableTouchListener={true}
                >
                  <div
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <WithStyles(ForwardRef(IconButton))
                      disabled={true}
                      onClick={[Function]}
                    >
                      <Memo(ForwardRef(KeyboardArrowUpIcon))
                        classes={
                          Object {
                            "root": "",
                          }
                        }
                      />
                    </WithStyles(ForwardRef(IconButton))>
                  </div>
                </WithStyles(ForwardRef(Tooltip))>
                <WithStyles(ForwardRef(Tooltip))
                  disableFocusListener={true}
                  disableHoverListener={true}
                  disableTouchListener={true}
                >
                  <div
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <WithStyles(ForwardRef(IconButton))
                      disabled={true}
                      onClick={[Function]}
                    >
                      <Memo(ForwardRef(KeyboardArrowDownIcon))
                        classes={
                          Object {
                            "root": "",
                          }
                        }
                      />
                    </WithStyles(ForwardRef(IconButton))>
                  </div>
                </WithStyles(ForwardRef(Tooltip))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <WithStyles(ForwardRef(Grid))
              item={true}
              style={
                Object {
                  "textAlign": "right",
                }
              }
              xs={12}
            >
              <WithStyles(ForwardRef(Tooltip))
                disableFocusListener={false}
                disableHoverListener={false}
                disableTouchListener={false}
              >
                <div
                  style={
                    Object {
                      "display": "inline",
                    }
                  }
                >
                  <WithStyles(ForwardRef(IconButton))
                    disabled={false}
                    onClick={[Function]}
                  >
                    <Memo(ForwardRef(DeleteIcon)) />
                  </WithStyles(ForwardRef(IconButton))>
                </div>
              </WithStyles(ForwardRef(Tooltip))>
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`GrantListEditorRow should render default view 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label={null}
    divider={true}
    style={
      Object {
        "padding": "8px 0 8px 0",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={9}
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="center"
          alignItems="stretch"
          container={true}
          spacing={0}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={5}
          >
            <WithStyles(ForwardRef(ListItemText))
              disableTypography={true}
              primary={
                <WithStyles(ForwardRef(Typography))
                  classes={
                    Object {
                      "root": "undefined ",
                    }
                  }
                  noWrap={true}
                  variant="body2"
                />
              }
              secondary={
                <WithStyles(ForwardRef(Typography))
                  classes={
                    Object {
                      "root": "",
                    }
                  }
                  noWrap={true}
                  variant="caption"
                >
                  
                </WithStyles(ForwardRef(Typography))>
              }
              style={
                Object {
                  "padding": 0,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <Hidden
            xsDown={true}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={4}
            >
              <WithStyles(ForwardRef(ListItemText))
                disableTypography={true}
                primary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "undefined ",
                      }
                    }
                    noWrap={true}
                    variant="body2"
                  >
                    undefined
                  </WithStyles(ForwardRef(Typography))>
                }
                secondary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "",
                      }
                    }
                    noWrap={true}
                    variant="caption"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                style={
                  Object {
                    "padding": 0,
                  }
                }
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={3}
            >
              <WithStyles(ForwardRef(ListItemText))
                disableTypography={true}
                primary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "undefined ",
                      }
                    }
                    noWrap={true}
                    variant="body2"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                secondary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "",
                      }
                    }
                    noWrap={true}
                    variant="caption"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                style={
                  Object {
                    "padding": 0,
                  }
                }
              />
            </WithStyles(ForwardRef(Grid))>
          </Hidden>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={3}
      >
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          style={
            Object {
              "margin": "0 0 -32px 0",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            container={true}
            spacing={0}
          >
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
                xs={8}
              >
                <WithStyles(ForwardRef(Tooltip))
                  disableFocusListener={true}
                  disableHoverListener={true}
                  disableTouchListener={true}
                >
                  <div
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <WithStyles(ForwardRef(IconButton))
                      disabled={true}
                      onClick={[Function]}
                    >
                      <Memo(ForwardRef(KeyboardArrowUpIcon))
                        classes={
                          Object {
                            "root": "",
                          }
                        }
                      />
                    </WithStyles(ForwardRef(IconButton))>
                  </div>
                </WithStyles(ForwardRef(Tooltip))>
                <WithStyles(ForwardRef(Tooltip))
                  disableFocusListener={true}
                  disableHoverListener={true}
                  disableTouchListener={true}
                >
                  <div
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <WithStyles(ForwardRef(IconButton))
                      disabled={true}
                      onClick={[Function]}
                    >
                      <Memo(ForwardRef(KeyboardArrowDownIcon))
                        classes={
                          Object {
                            "root": "",
                          }
                        }
                      />
                    </WithStyles(ForwardRef(IconButton))>
                  </div>
                </WithStyles(ForwardRef(Tooltip))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <WithStyles(ForwardRef(Grid))
              item={true}
              style={
                Object {
                  "textAlign": "right",
                }
              }
              xs={4}
            >
              <WithStyles(ForwardRef(Tooltip))
                disableFocusListener={false}
                disableHoverListener={false}
                disableTouchListener={false}
              >
                <div
                  style={
                    Object {
                      "display": "inline",
                    }
                  }
                >
                  <WithStyles(ForwardRef(IconButton))
                    disabled={false}
                    onClick={[Function]}
                  >
                    <Memo(ForwardRef(DeleteIcon)) />
                  </WithStyles(ForwardRef(IconButton))>
                </div>
              </WithStyles(ForwardRef(Tooltip))>
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`GrantListEditorRow should render given grant data 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={Object {}}
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select hint undefined"
    divider={true}
    style={
      Object {
        "padding": "8px 0 8px 0",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={9}
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="center"
          alignItems="stretch"
          container={true}
          spacing={0}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={5}
          >
            <WithStyles(ForwardRef(ListItemText))
              disableTypography={true}
              primary={
                <WithStyles(ForwardRef(Typography))
                  classes={
                    Object {
                      "root": "undefined selected-grant",
                    }
                  }
                  noWrap={true}
                  variant="body2"
                >
                  testing
                </WithStyles(ForwardRef(Typography))>
              }
              secondary={
                <WithStyles(ForwardRef(Typography))
                  classes={
                    Object {
                      "root": "",
                    }
                  }
                  noWrap={true}
                  variant="caption"
                >
                  
                </WithStyles(ForwardRef(Typography))>
              }
              style={
                Object {
                  "padding": 0,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <Hidden
            xsDown={true}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={4}
            >
              <WithStyles(ForwardRef(ListItemText))
                disableTypography={true}
                primary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "undefined selected-grant",
                      }
                    }
                    noWrap={true}
                    variant="body2"
                  >
                    1234
                  </WithStyles(ForwardRef(Typography))>
                }
                secondary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "",
                      }
                    }
                    noWrap={true}
                    variant="caption"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                style={
                  Object {
                    "padding": 0,
                  }
                }
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={3}
            >
              <WithStyles(ForwardRef(ListItemText))
                disableTypography={true}
                primary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "undefined selected-grant",
                      }
                    }
                    noWrap={true}
                    variant="body2"
                  >
                    Government
                  </WithStyles(ForwardRef(Typography))>
                }
                secondary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "",
                      }
                    }
                    noWrap={true}
                    variant="caption"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                style={
                  Object {
                    "padding": 0,
                  }
                }
              />
            </WithStyles(ForwardRef(Grid))>
          </Hidden>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={3}
      >
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          style={
            Object {
              "margin": "0 0 -32px 0",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            container={true}
            spacing={0}
          >
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
                xs={8}
              >
                <WithStyles(ForwardRef(Tooltip))
                  disableFocusListener={true}
                  disableHoverListener={true}
                  disableTouchListener={true}
                  title="Move up"
                >
                  <div
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <WithStyles(ForwardRef(IconButton))
                      aria-label="Move up"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <Memo(ForwardRef(KeyboardArrowUpIcon))
                        classes={
                          Object {
                            "root": "selected-grant",
                          }
                        }
                      />
                    </WithStyles(ForwardRef(IconButton))>
                  </div>
                </WithStyles(ForwardRef(Tooltip))>
                <WithStyles(ForwardRef(Tooltip))
                  disableFocusListener={true}
                  disableHoverListener={true}
                  disableTouchListener={true}
                  title="Move down"
                >
                  <div
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <WithStyles(ForwardRef(IconButton))
                      aria-label="Move down"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <Memo(ForwardRef(KeyboardArrowDownIcon))
                        classes={
                          Object {
                            "root": "selected-grant",
                          }
                        }
                      />
                    </WithStyles(ForwardRef(IconButton))>
                  </div>
                </WithStyles(ForwardRef(Tooltip))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <WithStyles(ForwardRef(Grid))
              item={true}
              style={
                Object {
                  "textAlign": "right",
                }
              }
              xs={4}
            >
              <WithStyles(ForwardRef(Tooltip))
                disableFocusListener={false}
                disableHoverListener={false}
                disableTouchListener={false}
                title="Delete hint"
              >
                <div
                  style={
                    Object {
                      "display": "inline",
                    }
                  }
                >
                  <WithStyles(ForwardRef(IconButton))
                    aria-label="Delete hint"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <Memo(ForwardRef(DeleteIcon)) />
                  </WithStyles(ForwardRef(IconButton))>
                </div>
              </WithStyles(ForwardRef(Tooltip))>
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`GrantListEditorRow should render given locale 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={Object {}}
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select hint testing"
    divider={true}
    style={
      Object {
        "padding": "8px 0 8px 0",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={9}
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="center"
          alignItems="stretch"
          container={true}
          spacing={0}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={5}
          >
            <WithStyles(ForwardRef(ListItemText))
              disableTypography={true}
              primary={
                <WithStyles(ForwardRef(Typography))
                  classes={
                    Object {
                      "root": "undefined ",
                    }
                  }
                  noWrap={true}
                  variant="body2"
                />
              }
              secondary={
                <WithStyles(ForwardRef(Typography))
                  classes={
                    Object {
                      "root": "",
                    }
                  }
                  noWrap={true}
                  variant="caption"
                >
                  
                </WithStyles(ForwardRef(Typography))>
              }
              style={
                Object {
                  "padding": 0,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <Hidden
            xsDown={true}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={4}
            >
              <WithStyles(ForwardRef(ListItemText))
                disableTypography={true}
                primary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "undefined ",
                      }
                    }
                    noWrap={true}
                    variant="body2"
                  >
                    undefined
                  </WithStyles(ForwardRef(Typography))>
                }
                secondary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "",
                      }
                    }
                    noWrap={true}
                    variant="caption"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                style={
                  Object {
                    "padding": 0,
                  }
                }
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={3}
            >
              <WithStyles(ForwardRef(ListItemText))
                disableTypography={true}
                primary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "undefined ",
                      }
                    }
                    noWrap={true}
                    variant="body2"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                secondary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "",
                      }
                    }
                    noWrap={true}
                    variant="caption"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                style={
                  Object {
                    "padding": 0,
                  }
                }
              />
            </WithStyles(ForwardRef(Grid))>
          </Hidden>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={3}
      >
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          style={
            Object {
              "margin": "0 0 -32px 0",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            container={true}
            spacing={0}
          >
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
                xs={8}
              >
                <WithStyles(ForwardRef(Tooltip))
                  disableFocusListener={true}
                  disableHoverListener={true}
                  disableTouchListener={true}
                  title="Move up"
                >
                  <div
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <WithStyles(ForwardRef(IconButton))
                      aria-label="Move up"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <Memo(ForwardRef(KeyboardArrowUpIcon))
                        classes={
                          Object {
                            "root": "",
                          }
                        }
                      />
                    </WithStyles(ForwardRef(IconButton))>
                  </div>
                </WithStyles(ForwardRef(Tooltip))>
                <WithStyles(ForwardRef(Tooltip))
                  disableFocusListener={true}
                  disableHoverListener={true}
                  disableTouchListener={true}
                  title="Move down"
                >
                  <div
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <WithStyles(ForwardRef(IconButton))
                      aria-label="Move down"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <Memo(ForwardRef(KeyboardArrowDownIcon))
                        classes={
                          Object {
                            "root": "",
                          }
                        }
                      />
                    </WithStyles(ForwardRef(IconButton))>
                  </div>
                </WithStyles(ForwardRef(Tooltip))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <WithStyles(ForwardRef(Grid))
              item={true}
              style={
                Object {
                  "textAlign": "right",
                }
              }
              xs={4}
            >
              <WithStyles(ForwardRef(Tooltip))
                disableFocusListener={false}
                disableHoverListener={false}
                disableTouchListener={false}
                title="Delete hint"
              >
                <div
                  style={
                    Object {
                      "display": "inline",
                    }
                  }
                >
                  <WithStyles(ForwardRef(IconButton))
                    aria-label="Delete hint"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <Memo(ForwardRef(DeleteIcon)) />
                  </WithStyles(ForwardRef(IconButton))>
                </div>
              </WithStyles(ForwardRef(Tooltip))>
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`GrantListEditorRow should show confirmation box 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label={null}
    divider={true}
    style={
      Object {
        "padding": "8px 0 8px 0",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={9}
      >
        <WithStyles(ForwardRef(Grid))
          alignContent="center"
          alignItems="stretch"
          container={true}
          spacing={0}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={5}
          >
            <WithStyles(ForwardRef(ListItemText))
              disableTypography={true}
              primary={
                <WithStyles(ForwardRef(Typography))
                  classes={
                    Object {
                      "root": "undefined ",
                    }
                  }
                  noWrap={true}
                  variant="body2"
                />
              }
              secondary={
                <WithStyles(ForwardRef(Typography))
                  classes={
                    Object {
                      "root": "",
                    }
                  }
                  noWrap={true}
                  variant="caption"
                >
                  
                </WithStyles(ForwardRef(Typography))>
              }
              style={
                Object {
                  "padding": 0,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
          <Hidden
            xsDown={true}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={4}
            >
              <WithStyles(ForwardRef(ListItemText))
                disableTypography={true}
                primary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "undefined ",
                      }
                    }
                    noWrap={true}
                    variant="body2"
                  >
                    undefined
                  </WithStyles(ForwardRef(Typography))>
                }
                secondary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "",
                      }
                    }
                    noWrap={true}
                    variant="caption"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                style={
                  Object {
                    "padding": 0,
                  }
                }
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={3}
            >
              <WithStyles(ForwardRef(ListItemText))
                disableTypography={true}
                primary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "undefined ",
                      }
                    }
                    noWrap={true}
                    variant="body2"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                secondary={
                  <WithStyles(ForwardRef(Typography))
                    classes={
                      Object {
                        "root": "",
                      }
                    }
                    noWrap={true}
                    variant="caption"
                  >
                    
                  </WithStyles(ForwardRef(Typography))>
                }
                style={
                  Object {
                    "padding": 0,
                  }
                }
              />
            </WithStyles(ForwardRef(Grid))>
          </Hidden>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={3}
      >
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          style={
            Object {
              "margin": "0 0 -32px 0",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            container={true}
            spacing={0}
          >
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
                xs={8}
              >
                <WithStyles(ForwardRef(Tooltip))
                  disableFocusListener={true}
                  disableHoverListener={true}
                  disableTouchListener={true}
                >
                  <div
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <WithStyles(ForwardRef(IconButton))
                      disabled={true}
                      onClick={[Function]}
                    >
                      <Memo(ForwardRef(KeyboardArrowUpIcon))
                        classes={
                          Object {
                            "root": "",
                          }
                        }
                      />
                    </WithStyles(ForwardRef(IconButton))>
                  </div>
                </WithStyles(ForwardRef(Tooltip))>
                <WithStyles(ForwardRef(Tooltip))
                  disableFocusListener={true}
                  disableHoverListener={true}
                  disableTouchListener={true}
                >
                  <div
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <WithStyles(ForwardRef(IconButton))
                      disabled={true}
                      onClick={[Function]}
                    >
                      <Memo(ForwardRef(KeyboardArrowDownIcon))
                        classes={
                          Object {
                            "root": "",
                          }
                        }
                      />
                    </WithStyles(ForwardRef(IconButton))>
                  </div>
                </WithStyles(ForwardRef(Tooltip))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <WithStyles(ForwardRef(Grid))
              item={true}
              style={
                Object {
                  "textAlign": "right",
                }
              }
              xs={4}
            >
              <WithStyles(ForwardRef(Tooltip))
                disableFocusListener={false}
                disableHoverListener={false}
                disableTouchListener={false}
              >
                <div
                  style={
                    Object {
                      "display": "inline",
                    }
                  }
                >
                  <WithStyles(ForwardRef(IconButton))
                    disabled={false}
                    onClick={[Function]}
                  >
                    <Memo(ForwardRef(DeleteIcon)) />
                  </WithStyles(ForwardRef(IconButton))>
                </div>
              </WithStyles(ForwardRef(Tooltip))>
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;
